# News_scrapper

./: .dvcignore  .env.example  .gitignore  .replit  DEPLOY_WEBSITE.md  Dockerfile  FLY_IO_DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md  PYTHONANYWHERE_DEPLOYMENT.md  README.md  SETUP_GITHUB_ACTIONS.md  WORKING_DEPLOYMENT_OPTIONS.md  docker-compose.yml  dvc.yaml  environment.yml  fly.toml  main.py  params.yaml  pyproject.toml  render.yaml  requirements.txt  vercel.json  wsgi.py
.github/workflows/: ml-pipeline.yml
configs/: config.yaml
evaluation/: .gitignore
scripts/: classify_articles.py  evaluate_model.py  generate_report.py  preprocess_data.py  run_scraping.py  train_models.py
src/: __init__.py
src/automation/: __init__.py
src/chatbot/: __init__.py  chatbot_engine.py
src/classification/: __init__.py  classifier.py
src/scraping/: __init__.py  news_scraper.py
src/web_app/: app.py
src/web_app/templates/: base.html  category.html  chatbot.html  error.html  index.html
