[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.0"
flask-cors = "^3.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.0"
feedparser = "^6.0.0"
scikit-learn = "^1.0.0"
transformers = "^4.20.0"
torch = "^1.11.0"
nltk = "^3.6"
textblob = "^0.15.0"
sqlalchemy = "^1.4.0"
dvc = "^2.10.0"
python-dotenv = "^0.19.0"
pyyaml = "^5.4.0"
tqdm = "^4.60.0"
vaderSentiment = "^3.3.2"
joblib = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"